# forum-rs

./: .gitignore  Cargo.toml  Cross.toml  README.md  dist-workspace.toml
.github/workflows/: dist.yml  rust.yml
src/: args.rs  forum_thread.rs  globals.rs  graph.rs  main.rs  sender.rs
src/experimental/: mod.rs  parallel.rs  sender.rs
src/utils/: file.rs  mod.rs  processing.rs  writer.rs
