[package]
name = "forum-rs"
version = "0.4.1"
edition = "2021"
authors = ["Wayne Lau"]
readme = "README.md"
description = "A Rust library for processing forum data."
repository = "https://github.com/wheynelau/forum-rs.git"

[[bin]]
name = "clean-reddit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
indicatif = "0.17.11"
lazy_static = "1.5.0"
petgraph = "0.7.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokenizers = { version = "0.20.2", features = ["hf-hub", "http"] }
tokio = { version = "1.44.1", features = ["full"] }

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
rand = "0.8.5"
tempfile = "3.13.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
